--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,31 @@
 # production
 /build
 
+# environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.idea/
+.vscode/
+*.log
 
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
